# mj-router

./: .env.example  .gitignore  README.md  config.yaml  cspell.config.yaml  mian.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  config.py
src/models/: __init__.py  enums.py  schemas.py
src/services/: __init__.py  image_generator.py  task_events.py  webhook.py
src/services/providers/: base.py  midjourney.py  openai.py
src/services/utils/: http.py
src/storage/: __init__.py  memory.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_services.py
tests/services/: test_http.py  test_image_generator.py
tests/services/providers/: test_base.py  test_midjourney.py  test_openai.py
