[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-generation-api"
version = "0.1.0"
description = "A FastAPI service for generating images using various AI providers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "RainbowBird", email = "rbxin2003@outlook.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.27.0",
    "mypy>=1.7.0",
    "ruff>=0.1.5",
    "black>=23.11.0",
    "tenacity>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = ["src"]
